--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
 	<h2>nihao  nihao  </h2>
 	<h2>nihao  nihao  </h2>
 	<h2>nihao  nihao  </h2>
+	<h2>biu biu biu</h2>
+	<h2>bang bang bang </h2>
 </body>
 </html>
